styles.css
body {
  font-family: "Merriweather", serif;
  font-weight: 400;
  font-style: normal;
  
  
}

.landing-pg-img {
  border-end-end-radius: 31%;
  border-end-start-radius: 15%;
}


#experience-tab {
  height: 100vh;
  scroll-margin-top: 60px;
  
}

.landing-pg, #certificates-tab, #education-tab, #skills-tab, #projects-tab{
  scroll-margin-top: 60px;

}


.transcript-img{
  border-radius: 10px;
  width: 90%;
  height: 20rem !important;
  
 
}

.edu-details{

  background-color: rgba(250, 247, 247, 0.8);
  color: black;
  border-radius: 10px;

  
}

/* .skill-grid{

  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  
} */

.accordion-button .center-align-text {
  text-align: center;
  width: 100%; 
}

.job-duties{

  text-align: left;
  list-style-type: "✨ "; 
}

.job-duties li{
  margin-bottom: 10px;
}


.tech-stack{

  display: flex;

}

.card-text{
  margin-bottom: 2px !important;
}

.projects-btn{
  display: flex;
  justify-content: center;
}

.profile{
  /* background: linear-gradient(45deg, #4b6cb7, #182848); */
  background: linear-gradient(45deg, #004e92, #e5e5e5);
  height: 400px;
  display: flex;
  align-items: end;
  border-radius: 20px;
}

.display-3{
  background: -webkit-linear-gradient(45deg, #003366, #999999);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}

.contact-icon:hover{
  filter: brightness(60%);
}

.github-icon:hover {
  opacity: 0.7;
}

.contact-icon{
  margin-right: 1rem;
}

h1{
color:  #02305d;
}
.offcanvas {

  width: calc(var(--bs-offcanvas-width) / 2) !important;

}

.active{

  font-weight: bolder;
  border-bottom: 3px solid #003366 ;
  
}

.nav-link:hover{
  font-weight: bold;
}

.navbar{
  background-color: white !important;
}

.accordion{

  max-width: 70%;
  margin-left: auto;
  margin-right: auto;
}

.accordion-button,.accordion-header .accordion-button {
  background-color: #43c2f738 !important;
  
  
}

.accordion-body{
  background-color: whitesmoke;
}

.job-card{
  border: none;
  background: transparent;

}

.card-body{

  color: #003366 ;
}

